commit translated contents

--- a/api/qsharp/microsoft.quantum.canon.transformedoperation.yml
+++ b/api/qsharp/microsoft.quantum.canon.transformedoperation.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Canon
 summary: 给定一个函数和一个操作，返回一个新的操作，其输入由给定函数转换。
 examples: >-
-  以下调用使用 @"Microsoft.Quantum.Arithmetic.LittleEndianAsBigEndian" 将为 @"Microsoft.Quantum.Arithmetic.BigEndian" 输入设计的操作转换为接受类型 @"Microsoft.Quantum.Arithmetic.LittleEndian"的输入的操作：
+  以下调用使用@"Microsoft.Quantum.Arithmetic.LittleEndianAsBigEndian"将为输入设计的@"Microsoft.Quantum.Arithmetic.BigEndian"操作转换为接受类型@"Microsoft.Quantum.Arithmetic.LittleEndian"为的输入的操作：
 
 
   ```qsharp
@@ -42,7 +42,7 @@ input:
 output:
   content: ('U => Unit)
   types:
-  - summary: 新操作 tbat 通过其输入调用 `fn`，然后将得到的输出传递到 `op`。
+  - summary: 新操作 tbat 的输入`fn`调用，然后将结果输出传递给`op`。
     isOperation: true
     input:
       types:
@@ -59,9 +59,9 @@ seeAlso:
 - applywithinputtransformation
 - compose
 metadata:
-  ms.openlocfilehash: 8bf89235c2f702ec6cd3a9d8950c13ff6ce8cf8c
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a2ac6d6682fdbe064e655e5af9a9e8454edac5d3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73217098"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678083"
