--- a/api/qsharp/microsoft.quantum.canon.uncurriedopc.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurriedopc.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   给定一个返回操作的函数，返回一个将两个输入作为元组的新操作。
 
-  修饰符 `C` 指示操作可控制。
+  修饰符`C`指示操作可以控制。
 syntax: "function UncurriedOpC (curriedOp : ('T -> ('U => Unit is Ctl))) : (('T, 'U) => Unit is Ctl)"
 input:
   content: "(curriedOp : ('T -> ('U => Unit is Ctl)))"
@@ -34,7 +34,7 @@ input:
 output:
   content: (('T, 'U) => Unit is Ctl)
   types:
-  - summary: '`op(t, u)` 等效于 `(curriedOp(t))(u)`的新操作 `op`。'
+  - summary: 与等效的`op` `op(t, u)`新操作`(curriedOp(t))(u)`。
     isOperation: true
     input:
       types:
@@ -56,9 +56,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.uncurryop
 metadata:
-  ms.openlocfilehash: 2808ad1be091f98185ca9b218d2df6065c15a143
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 763ea81f9a459a358d9a41e177697eb6bf2ca307
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73216945"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677978"
