--- a/api/qsharp/microsoft.quantum.characterization.estimatefrequencya.yml
+++ b/api/qsharp/microsoft.quantum.characterization.estimatefrequencya.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.characterization.estimatefrequencya
 name: EstimateFrequencyA
 type: operation
 namespace: Microsoft.Quantum.Characterization
-summary: 对于 adjointable 和度量值的准备，通过执行给定数量的试验来估算度量成功（返回 `Zero`）的频率。
+summary: 对于 adjointable 和度量值的准备，通过执行给定数量的试验来估算度量成功（ `Zero`返回）的频率。
 remarks: 对于 adjointable 操作，可以执行某些假设，如调用操作时，会将 qubits 的状态准备为完全相同的状态，从而使目标计算机能够进行某种性能优化。
 syntax: 'operation EstimateFrequencyA (preparation : (Qubit[] => Unit is Adj), measurement : (Qubit[] => Result), nQubits : Int, nMeasurements : Int) : Double'
 input:
@@ -46,13 +46,13 @@ input:
 output:
   content: Double
   types:
-  - summary: 估计 $ \hat{p} $ of $M （P （\ket{00 \cdots 0} \bra{00 \cdots 0}）） $ 返回 `Zero`，使用无偏差二项式估计器 $ \hat{p} = n\_{\uparrow}/n\_{\text{measurements}} $，其中 $n\_{\uparrow} $ 是观察到的 `Zero` 结果数。
+  - summary: 估计 $ \hat{p} $ of $M （P （\ket{00 \cdots 0} \bra{00 \cdots 0}）） $ `Zero`返回的频率，使用非偏置二项式估计器 $ \hat{p} = n\_{\uparrow}\_$ \text{measurements}}，其中 $n\_{\uparrow} $ 是观察到的`Zero`结果数。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: cfc90cee0b98b88391ee23218489669600a97920
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 064f6d3cf9c075d635ed27ac4192b5aa4045e4d8
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73229168"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677707"
