--- a/api/qsharp/microsoft.quantum.convert.maybebigintasint.yml
+++ b/api/qsharp/microsoft.quantum.convert.maybebigintasint.yml
@@ -7,7 +7,7 @@ summary: >-
   如果可能，将给定的大整数转换为等效的整数。
 
   当且仅当可以进行转换时，函数将返回生成的整数对以及布尔标志。
-remarks: 有关更多详细信息，请参阅[ C# BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。
+remarks: '有关更多详细信息，请参阅[c # BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。'
 syntax: 'function MaybeBigIntAsInt (a : BigInt) : (Int, Bool)'
 input:
   content: '(a : BigInt)'
@@ -24,9 +24,9 @@ output:
     - isPrimitive: true
       uid: Bool
 metadata:
-  ms.openlocfilehash: cd679df4a0cf178bf53bbf566bdfa0395ad8b019
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 98bd88315e9a1cbce2770ba82fd0eed18eac73c3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73230766"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677402"
