--- a/api/qsharp/microsoft.quantum.diagnostics.assertqubit.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertqubit.yml
@@ -3,14 +3,14 @@ uid: microsoft.quantum.diagnostics.assertqubit
 name: AssertQubit
 type: operation
 namespace: Microsoft.Quantum.Diagnostics
-summary: 断言 qubit `q` 处于 Pauli Z 运算符所需的 eigenstate 中。
-remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance> 允许对任意 qubit 的状态进行断言，而不是仅 $Z $ eigenstates。
+summary: 断言 qubit `q`位于 Pauli Z 运算符所需的 eigenstate 中。
+remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance>允许对任意 qubit 的状态进行断言，而不只是 $Z $ eigenstates。
 syntax: 'operation AssertQubit (expected : Result, q : Qubit) : Unit'
 input:
   content: '(expected : Result, q : Qubit)'
   types:
   - name: expected
-    summary: 应 qubit 的状态： `Zero` 或 `One`。
+    summary: Qubit 应采用的状态： `Zero`或。 `One`
     isPrimitive: true
     uid: Result
   - name: q
@@ -25,9 +25,9 @@ output:
 seeAlso:
 - assertqubitisinstatewithintolerance
 metadata:
-  ms.openlocfilehash: e926e8a106e7ef0999f30d00922394e611aa40a8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 18d1db5c36dddf7bd40c64e02252a15d37dc4fe1
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227162"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677264"
