--- a/api/qsharp/microsoft.quantum.diagnostics.assertqubitwithintolerance.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertqubitwithintolerance.yml
@@ -3,14 +3,14 @@ uid: microsoft.quantum.diagnostics.assertqubitwithintolerance
 name: AssertQubitWithinTolerance
 type: operation
 namespace: Microsoft.Quantum.Diagnostics
-summary: 断言 qubit `q` 处于 Pauli Z 运算符所需的 eigenstate 中，直到达到给定的容差。
-remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance> 允许对任意 qubit 的状态进行断言，而不是仅 $Z $ eigenstates。
+summary: 断言 qubit `q`位于 Pauli Z 运算符的预期 eigenstate 中，直到达到给定的容差。
+remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance>允许对任意 qubit 的状态进行断言，而不只是 $Z $ eigenstates。
 syntax: 'operation AssertQubitWithinTolerance (expected : Result, q : Qubit, tolerance : Double) : Unit'
 input:
   content: '(expected : Result, q : Qubit, tolerance : Double)'
   types:
   - name: expected
-    summary: 应 qubit 的状态： `Zero` 或 `One`。
+    summary: Qubit 应采用的状态： `Zero`或。 `One`
     isPrimitive: true
     uid: Result
   - name: q
@@ -29,9 +29,9 @@ output:
 seeAlso:
 - assertqubitisinstatewithintolerance
 metadata:
-  ms.openlocfilehash: ccb44aed5612c369ff7c4e687e72fc65fba4180e
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 2749c682128e7c67506c2291d7a9e6034998731d
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227077"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677249"
