--- a/api/qsharp/microsoft.quantum.canon.uncurriedopca.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurriedopca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   给定一个返回操作的函数，返回一个将两个输入作为元组的新操作。
 
-  修饰符 `CA` 指示操作可以控制和 adjointable。
+  修饰符`CA`指示操作可以控制和 adjointable。
 syntax: "function UncurriedOpCA (curriedOp : ('T -> ('U => Unit is Ctl + Adj))) : (('T, 'U) => Unit is Ctl + Adj)"
 input:
   content: "(curriedOp : ('T -> ('U => Unit is Ctl + Adj)))"
@@ -35,7 +35,7 @@ input:
 output:
   content: (('T, 'U) => Unit is Ctl + Adj)
   types:
-  - summary: '`op(t, u)` 等效于 `(curriedOp(t))(u)`的新操作 `op`。'
+  - summary: 与等效的`op` `op(t, u)`新操作`(curriedOp(t))(u)`。
     isOperation: true
     input:
       types:
@@ -58,9 +58,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.uncurryop
 metadata:
-  ms.openlocfilehash: 831ff5d68f6b3e97f6ab80460e0a4918b0b4e085
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: aa04fce36dcfb989e109ab791822e83fba3cd9bc
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73216860"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677962"
