--- a/api/qsharp/microsoft.quantum.characterization.estimateoverlapbetweenstates.yml
+++ b/api/qsharp/microsoft.quantum.characterization.estimateoverlapbetweenstates.yml
@@ -4,7 +4,7 @@ name: EstimateOverlapBetweenStates
 type: operation
 namespace: Microsoft.Quantum.Characterization
 summary: 给定两个操作，每个操作都准备状态的副本，并估计每个操作准备的状态之间的平方重叠。
-remarks: 此操作使用交换测试查找 $ $ \begin{align} \left |\braket{00\cdots 0 |V ^ {\dagger} U |00 \ cdots 0} \right | ^ 2 \end{align} $ $，其中 $U $ 是 `preparation1`的操作的单一表示形式，其中 $V $ 对应于 `preparation2`。
+remarks: 此操作使用交换测试查找 $ $ \begin{align} \left |\braket{00\cdots 0 |V ^ {\dagger} U |00 \ cdots 0} \right | ^ 2 \end{align} $ $，其中 $U $ 是操作的`preparation1`单一表示形式，其中 $V $ 对应于。 `preparation2`
 syntax: 'operation EstimateOverlapBetweenStates (preparation1 : (Qubit[] => Unit is Adj), preparation2 : (Qubit[] => Unit is Adj), nQubits : Int, nMeasurements : Int) : Double'
 input:
   content: '(preparation1 : (Qubit[] => Unit is Adj), preparation2 : (Qubit[] => Unit is Adj), nQubits : Int, nMeasurements : Int)'
@@ -38,7 +38,7 @@ input:
     functors:
     - Adjoint
   - name: nQubits
-    summary: '`commonPreparation`、`preparation1`和 `preparation2` 所有操作的 qubits 的数目。'
+    summary: 对其`commonPreparation`执行、 `preparation1`和`preparation2`的 qubits 的数目。
     isPrimitive: true
     uid: Int
   - name: nMeasurements
@@ -54,9 +54,9 @@ seeAlso:
 - microsoft.quantum.characterization.estimaterealoverlapbetweenstates
 - microsoft.quantum.characterization.estimateimagoverlapbetweenstates
 metadata:
-  ms.openlocfilehash: aa8713a1ef7176793a0b11baa675b22e48d61411
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 6eefd9b32b73d3f73bb31ff81509466e754e20d6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76872608"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677693"
