--- a/api/qsharp/microsoft.quantum.chemistry.htermtogenidx.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.htermtogenidx.yml
@@ -3,13 +3,13 @@ uid: microsoft.quantum.chemistry.htermtogenidx
 name: HTermToGenIdx
 type: function
 namespace: Microsoft.Quantum.Chemistry
-summary: 将 `HTerm` 数据格式的 Hamiltonian 术语转换为 GeneratorIndex。
+summary: 将`HTerm`数据格式的 Hamiltonian 术语转换为 GeneratorIndex。
 syntax: 'function HTermToGenIdx (term : Microsoft.Quantum.Chemistry.HTerm, termType : Int[]) : Microsoft.Quantum.Simulation.GeneratorIndex'
 input:
   content: '(term : Microsoft.Quantum.Chemistry.HTerm, termType : Int[])'
   types:
   - name: term
-    summary: 输入 `HTerm` 格式的数据。
+    summary: 输入格式的`HTerm`数据。
     uid: microsoft.quantum.chemistry.hterm
   - name: termType
     summary: 添加到 GeneratorIndex 的其他信息。
@@ -19,12 +19,12 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.GeneratorIndex
   types:
-  - summary: 表示由 `term`表示的 Hamiltonian 术语的 GeneratorIndex，以及 `termType`添加的附加信息。
+  - summary: 表示由表示的`term`Hamiltonian 术语的 GeneratorIndex，以及添加的`termType`附加信息。
     uid: microsoft.quantum.simulation.generatorindex
 metadata:
-  ms.openlocfilehash: edfd08b1e9f80a0f468d50a10a7ad3ff0187511c
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: cf8f527c6acf2762b5ce415b707358f1011997ef
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73228862"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677507"
