--- a/api/qsharp/microsoft.quantum.convert.intasdouble.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasdouble.yml
@@ -4,7 +4,7 @@ name: IntAsDouble
 type: function
 namespace: Microsoft.Quantum.Convert
 summary: 将给定整数转换为等效的双精度浮点数。
-remarks: 有关更多详细信息，请参阅[ C# ToDouble](https://docs.microsoft.com/dotnet/api/system.convert.todouble?view=netframework-4.7.1#System_Convert_ToDouble_System_Int64_) 。
+remarks: '有关更多详细信息，请参阅[c # ToDouble](https://docs.microsoft.com/dotnet/api/system.convert.todouble?view=netframework-4.7.1#System_Convert_ToDouble_System_Int64_) 。'
 syntax: 'function IntAsDouble (a : Int) : Double'
 input:
   content: '(a : Int)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: a81a6f63c00b6d7ab0632d3b55d07b06e0fdfd5a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 87ae45f7b96fb3c66ef8b49ab6ca297a7ca48871
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233486"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677460"
