--- a/api/qsharp/microsoft.quantum.convert.intasstring.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasstring.yml
@@ -4,7 +4,7 @@ name: IntAsString
 type: function
 namespace: Microsoft.Quantum.Convert
 summary: 将给定整数转换为等效的字符串表示形式。
-remarks: 有关更多详细信息，请参阅[ C# Convert。](https://docs.microsoft.com/dotnet/api/system.convert.tostring?view=netframework-4.7.1#System_Convert_ToString_System_Int64_)
+remarks: '有关更多详细信息，请参阅[c # Convert。](https://docs.microsoft.com/dotnet/api/system.convert.tostring?view=netframework-4.7.1#System_Convert_ToString_System_Int64_)'
 syntax: 'function IntAsString (a : Int) : String'
 input:
   content: '(a : Int)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: String
 metadata:
-  ms.openlocfilehash: 0a4b5418194bfd45b904f2469cac3bd020e838a7
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 26264d2de273f434da19e70937bf88e4b8dcc43e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066517"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677445"
