--- a/api/qsharp/microsoft.quantum.convert.pauliarrayasint.yml
+++ b/api/qsharp/microsoft.quantum.convert.pauliarrayasint.yml
@@ -10,7 +10,7 @@ remarks: >-
   \end{align} $ $
 
 
-  给定 Pauli 运算符的数组 `[P0, ..., Pn]`，此函数将返回一个整数展开的整数，通过将每个 Pauli 运算符的映射串联为大字节序顺序 `bits(Pn) ... bits(P0)`来形成。
+  给定一个 Pauli 运算符`[P0, ..., Pn]`数组，该函数将返回一个整数，该整数通过以大字节序顺序`bits(Pn) ... bits(P0)`连接每个 Pauli 运算符的映射来形成二进制展开。
 syntax: 'function PauliArrayAsInt (paulis : Pauli[]) : Int'
 input:
   content: '(paulis : Pauli[])'
@@ -23,13 +23,13 @@ input:
 output:
   content: Int
   types:
-  - summary: 唯一标识 `paulis`的整数，如下所述。
+  - summary: 唯一标识`paulis`的整数，如下所述。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 0c211075d07147b1c1392fe3f3e4ceb110364bb3
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 170218ccf1ec4ee1183a7a69ff1e0969f595cac4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73230749"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677392"
