--- a/api/qsharp/microsoft.quantum.core.rangestep.yml
+++ b/api/qsharp/microsoft.quantum.core.rangestep.yml
@@ -4,7 +4,7 @@ name: RangeStep
 type: function
 namespace: Microsoft.Quantum.Core
 summary: 返回一个整数，该整数指定如何计算范围的下一个值。
-remarks: 范围表达式的第一个元素为 `start`，其第二个元素是 `start+step`，第三个元素为 `start+step+step`，依此类推，直到传递 `end`。
+remarks: 范围表达式的第一个元素是`start`，其第二个`start+step`元素是，第`start+step+step`三个元素为， `end`依此类推，直到传递。
 syntax: 'function RangeStep (range : Range) : Int'
 input:
   content: '(range : Range)'
@@ -19,9 +19,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 0195f0f2eb03c163ae08cc789867627286a44097
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 30f67fba4e263f3b01bec1c360198728087783f2
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066602"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677327"
