--- a/api/qsharp/microsoft.quantum.diagnostics.dumpregister.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.dumpregister.yml
@@ -7,10 +7,10 @@ summary: 将当前目标计算机的状态转储为与给定的 qubits 相关联
 remarks: >-
   此方法允许你将与给定 qubits 的状态关联的信息转储到一个文件或其他位置。
 
-  生成的实际信息和 `location` 的语义特定于每个目标计算机。 但是，将空元组作为位置（`()`）提供通常意味着将输出生成到控制台。
+  生成的实际信息和的语义`location`特定于每个目标计算机。 但是，将空元组作为位置（`()`）提供通常意味着将输出生成到控制台。
 
 
-  对于作为量程开发工具包的一部分分发的本地完整状态模拟器，此方法需要一个带有文件路径的字符串，该文件将给定 qubits 的状态（即，对应子系统的波形函数）作为一维 ar 写入复数的射线，其中每个元素表示测量相应状态的概率的 amplitudes。
+  对于作为量程开发工具包的一部分分发的本地完整状态模拟器，此方法需要一个包含文件路径的字符串，该文件将给定 qubits 的状态（即相应子系统的波形函数）作为复数的一维数组写入，其中每个元素表示测量相应状态的概率的 amplitudes。
 
   如果给定的 qubits 与一些其他 qubit 放大，且无法分离其状态，则只会报告 qubits 为放大。
 syntax: "function DumpRegister (location : 'T, qubits : Qubit[]) : Unit"
@@ -33,9 +33,9 @@ output:
     isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 6d553a95bfa619d142b681e2830fc0375c6bcae5
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 3bf5302364b37cb1ccef651935833b966ff84464
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227026"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677231"
