--- a/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianpower.yml
+++ b/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianpower.yml
@@ -7,9 +7,9 @@ summary: >-
   以整数范围的笛卡尔幂对每个索引应用操作。
 
 
-  以迭代方式为范围 `0..(bound - 1)`范围的每个元素应用操作。
+  以迭代方式为范围`0..(bound - 1)`的笛卡尔幂的每个元素应用操作。
 examples: >-
-  给定一个操作 `op`，以下两个代码段是等效的：
+  给定一个操作`op`，以下两个代码段是等效的：
 
 
   ```Q#
@@ -39,7 +39,7 @@ input:
   content: '(power : Int, bound : Int, op : (Int[] => Unit))'
   types:
   - name: power
-    summary: 应对范围 `0..(bound - 1)` 应引发的笛卡尔幂。
+    summary: 应为范围`0..(bound - 1)`增加的笛卡尔幂。
     isPrimitive: true
     uid: Int
   - name: bound
@@ -66,9 +66,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.iteratethroughcartesianproduct
 metadata:
-  ms.openlocfilehash: 4679e1b569dab167eecbb22947543ab993d7fa8d
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: a6f2d0e1f99c6cf7038803271af974a1c5fca465
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76870931"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679054"
