--- a/api/qsharp/microsoft.quantum.canon.isresultone.yml
+++ b/api/qsharp/microsoft.quantum.canon.isresultone.yml
@@ -3,25 +3,25 @@ uid: microsoft.quantum.canon.isresultone
 name: IsResultOne
 type: function
 namespace: Microsoft.Quantum.Canon
-summary: 测试给定的结果值是否等于 `One`。
+summary: 测试给定结果值是否等于`One`。
 syntax: 'function IsResultOne (input : Result) : Bool'
 input:
   content: '(input : Result)'
   types:
   - name: input
-    summary: 要测试 `Result` 值。
+    summary: '`Result`要测试的值。'
     isPrimitive: true
     uid: Result
 output:
   content: Bool
   types:
-  - summary: 如果 `input` 等于 `One`，则返回 `true`。
+  - summary: 如果`true` `input`等于，则返回`One`。
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 0b4ffb68cbe07d4aa15a61485af4942b998f201a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 18e4f8d157e6783b129543deef0ac0e3e18dfc50
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225921"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679092"
