--- a/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianproduct.yml
+++ b/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianproduct.yml
@@ -7,9 +7,9 @@ summary: >-
   对若干范围内笛卡尔积中的每个索引应用操作。
 
 
-  以迭代方式为 `0..(bounds[0] - 1)`，`0..(bounds[1] - 1)`，...，`0..(bounds[Length(bounds) - 1] - 1)` 的笛卡尔积的每个元素应用操作
+  以迭代方式为`0..(bounds[0] - 1)`、 `0..(bounds[1] - 1)`、... 的笛卡尔积的每个元素应用操作`0..(bounds[Length(bounds) - 1] - 1)`
 examples: >-
-  给定一个操作 `op`，以下两个代码段是等效的：
+  给定一个操作`op`，以下两个代码段是等效的：
 
 
   ```Q#
@@ -69,9 +69,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.iteratethroughcartesianpower
 metadata:
-  ms.openlocfilehash: 440c120daf8a316dec1fbbab758f4f46a929d6a0
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 0021d7715963d0b0d2f3a0248b857b7591876220
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871237"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679044"
