--- a/api/qsharp/microsoft.quantum.canon.multiplexerbruteforcefromgenerator.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexerbruteforcefromgenerator.yml
@@ -13,7 +13,7 @@ input:
   content: '(unitaryGenerator : (Int, (Int -> (Qubit[] => Unit is Adj + Ctl))))'
   types:
   - name: unitaryGenerator
-    summary: 一个元组，其中第一个元素 `Int` $N $ 的 unitaries，第二个元素 `(Int -> ('T => () is Adj + Ctl))` 是一个函数，该函数在 $ [0，N-1] $ 中采用整数 $j $，并输出单一操作 $V _j $。
+    summary: 一个元组，其中第`Int`一个元素是 unitaries $N $ 的数量，第二个`(Int -> ('T => () is Adj + Ctl))`元素是在 $ [0，N-1] $ 中采用整数 $j $ 并输出单一运算 $V _j $ 的函数。
     types:
     - isPrimitive: true
       uid: Int
@@ -40,7 +40,7 @@ input:
 output:
   content: ((Microsoft.Quantum.Arithmetic.LittleEndian, Qubit[]) => Unit is Adj + Ctl)
   types:
-  - summary: 按 $U $ 的乘法控制的单一操作，该操作应用 `unitaryGenerator`描述的 unitaries。
+  - summary: 按 $U $ 的乘法控制的单一操作，该操作将`unitaryGenerator`应用描述的 unitaries。
     isOperation: true
     input:
       types:
@@ -58,9 +58,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.multiplexerbruteforcefromgenerator
 metadata:
-  ms.openlocfilehash: 3a5fc9e4b21f14833f28513ad66baa20a4df3de4
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: cfd415245dd96508b015f8d6fa3dfe0c90fa9c0e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73222725"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678863"
