--- a/api/qsharp/microsoft.quantum.canon.multiplexerfromgenerator.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexerfromgenerator.yml
@@ -4,7 +4,7 @@ name: MultiplexerFromGenerator
 type: function
 namespace: Microsoft.Quantum.Canon
 summary: >-
-  返回一个按 _j $ 的乘法控制的单一操作，该 $U 操作将应用单一 $V qubit 号状态 $ \ket{j} $ 时应用单一的。
+  返回 $U $ 的乘法控制的单一操作，该操作将应用单一 $V _j $，由 n qubit number state $ \ket{j} $ 控制。
 
 
   $U = \sum ^ {2 ^ n-1} _ {j = 0} \ket{j}\bra{j}\otimes V_j $。
@@ -13,7 +13,7 @@ input:
   content: '(unitaryGenerator : (Int, (Int -> (Qubit[] => Unit is Adj + Ctl))))'
   types:
   - name: unitaryGenerator
-    summary: 一个元组，其中第一个元素 `Int` $N $ 的 unitaries，第二个元素 `(Int -> ('T => () is Adj + Ctl))` 是一个函数，该函数在 $ [0，N-1] $ 中采用整数 $j $，并输出单一操作 $V _j $。
+    summary: 一个元组，其中第`Int`一个元素是 unitaries $N $ 的数量，第二个`(Int -> ('T => () is Adj + Ctl))`元素是在 $ [0，N-1] $ 中采用整数 $j $ 并输出单一运算 $V _j $ 的函数。
     types:
     - isPrimitive: true
       uid: Int
@@ -40,7 +40,7 @@ input:
 output:
   content: ((Microsoft.Quantum.Arithmetic.LittleEndian, Qubit[]) => Unit is Adj + Ctl)
   types:
-  - summary: 按 $U $ 的乘法控制的单一操作，该操作应用 `unitaryGenerator`描述的 unitaries。
+  - summary: 按 $U $ 的乘法控制的单一操作，该操作将`unitaryGenerator`应用描述的 unitaries。
     isOperation: true
     input:
       types:
@@ -58,9 +58,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.multiplexoperationsfromgenerator
 metadata:
-  ms.openlocfilehash: 52cd79e2450e7c33c8c5ff2b1d6fbf540200c7e7
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 1000e7606b7afed988687839cc85442a0dd9ff30
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227757"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678847"
