--- a/api/qsharp/microsoft.quantum.canon.multiplexoperationsbruteforcefromgenerator.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexoperationsbruteforcefromgenerator.yml
@@ -4,17 +4,17 @@ name: MultiplexOperationsBruteForceFromGenerator
 type: operation
 namespace: Microsoft.Quantum.Canon
 summary: >-
-  应用 $U $ 的乘法控制的单一操作，该操作将应用单一 $V 的 qubit 数字状态 $ \ket{j} $。
+  应用 $U $ 的乘法控制的单一操作，该操作将应用单一 $V _j $，由 n qubit number state $ \ket{j} $ 控制。
 
 
   $U = \sum ^ {N-1} _ {j = 0} \ket{j}\bra{j}\otimes V_j $。
-remarks: 如果指定的 `coefficients` 小于 $ 2 ^ n $，则将用标识元素填充。 此版本通过通过 n 个控制的单一运算符循环直接实现。
+remarks: '`coefficients`如果指定少于 $ 2 ^ n $，则将用标识元素填充。 此版本通过通过 n 个控制的单一运算符循环直接实现。'
 syntax: "operation MultiplexOperationsBruteForceFromGenerator (unitaryGenerator : (Int, (Int -> ('T => Unit is Adj + Ctl))), index : Microsoft.Quantum.Arithmetic.LittleEndian, target : 'T) : Unit"
 input:
   content: "(unitaryGenerator : (Int, (Int -> ('T => Unit is Adj + Ctl))), index : Microsoft.Quantum.Arithmetic.LittleEndian, target : 'T)"
   types:
   - name: unitaryGenerator
-    summary: 一个元组，其中第一个元素 `Int` $N $ 的 unitaries，第二个元素 `(Int -> ('T => () is Adj + Ctl))` 是一个函数，该函数在 $ [0，N-1] $ 中采用整数 $j $，并输出单一操作 $V _j $。
+    summary: 一个元组，其中第`Int`一个元素是 unitaries $N $ 的数量，第二个`(Int -> ('T => () is Adj + Ctl))`元素是在 $ [0，N-1] $ 中采用整数 $j $ 并输出单一运算 $V _j $ 的函数。
     types:
     - isPrimitive: true
       uid: Int
@@ -41,7 +41,7 @@ input:
     summary: $n 以小字节序格式编码数字状态 $ \ket{j} $ 的 qubit 控制寄存器。
     uid: microsoft.quantum.arithmetic.littleendian
   - name: target
-    summary: $V _j $ 操作的泛型 qubit 寄存器。
+    summary: 泛型 qubit 注册 $V _j $ 作用于。
     uid: "'T"
     isLocal: true
 output:
@@ -53,9 +53,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: a010fc41e76c09f064fdb7a0fa890efcfd8a41f8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ea435831323b0e117027005fa8007c87ab3f2575
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225156"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678803"
