--- a/api/qsharp/microsoft.quantum.canon.noop.yml
+++ b/api/qsharp/microsoft.quantum.canon.noop.yml
@@ -11,10 +11,10 @@ summary: >-
 
   这在需要输入操作类型时非常有用，但不应采取任何措施。
 
-  例如，如果特定错误更正症状指示未发生错误，则 `NoOp<Qubit[]>` 可能是正确的恢复过程。
+  例如，如果特定错误更正症状指示未发生错误， `NoOp<Qubit[]>`则可能是正确的恢复过程。
 
-  同样，如果某个操作需要状态准备过程作为输入，可以使用 `NoOp<Qubit[]>` 来准备状态 $ \ket{0 \cdots 0} $。
-remarks: 几乎在所有情况下，都需要显式指定 `NoOp` 的 type 参数。 例如，`NoOp<Qubit>` 与 <xref:microsoft.quantum.intrinsic.i>相同。
+  同样，如果某个操作需要状态准备过程作为输入， `NoOp<Qubit[]>`则可使用来准备状态 $ \ket{0 \cdots 0} $。
+remarks: 几乎在所有情况下，都需要显式`NoOp`指定的类型参数。 例如， `NoOp<Qubit>`与相同<xref:microsoft.quantum.intrinsic.i>。
 syntax: "operation NoOp (input : 'T) : Unit"
 input:
   content: "(input : 'T)"
@@ -34,9 +34,9 @@ functors:
 seeAlso:
 - microsoft.quantum.intrinsic.i
 metadata:
-  ms.openlocfilehash: 8752eb93c1fba59065518ffd4665ea6f110ce1cc
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 74c85340e065929feabb81d7e97339f80255c0f6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73222674"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678724"
