--- a/api/qsharp/microsoft.quantum.canon.operationpowca.yml
+++ b/api/qsharp/microsoft.quantum.canon.operationpowca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   引发幂运算。
 
-  修饰符 `A` 指示操作可控制和 adjointable。
+  修饰符`A`指示该操作是可控制的且 adjointable。
 
 
   也就是说，在给定一个表示入口 $U $ 的操作的情况下，将为 power $m $ $U ^ m $ 返回一个新操作。
@@ -54,9 +54,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.operationpow
 metadata:
-  ms.openlocfilehash: d5fcdf5fe3cefd5ecc5bf0421960db542a7f59a3
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 896d142da1075eb282ef7889c26b9874ca478d16
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871509"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678662"
