--- a/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterca.yml
+++ b/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将操作限制为寄存器的索引数组，即，subregister。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 syntax: 'function RestrictedToSubregisterCA (op : (Qubit[] => Unit is Adj + Ctl), idxs : Int[]) : (Qubit[] => Unit is Adj + Ctl)'
 input:
   content: '(op : (Qubit[] => Unit is Adj + Ctl), idxs : Int[])'
@@ -50,9 +50,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.restrictedtosubregister
 metadata:
-  ms.openlocfilehash: 699126640d5afaebac8a6276458ffc5a497fe61a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 153dc21e2c4e2ded5acd5c1343c766d7a1cda540
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73222504"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82678420"
